--- a/src/pages/NewRegistro/styles.css
+++ b/src/pages/NewRegistro/styles.css
@@ -24,7 +24,7 @@
   margin-top: 25px;
   border: 1px solid #000;
   border-radius: 8px;
-  background: #2e4967;
+  background: #6d121e;
   color: #fff;
   font-size: 20px;
   text-align: center;
@@ -46,7 +46,7 @@
 
 .newregister-container form h1 {
   text-align: center;
-  color: #2e4967;
+  color: #6d121e;
 }
 
 .newregister-container .content section {
