--- a/src/global.css
+++ b/src/global.css
@@ -44,7 +44,7 @@ form textarea {
 .button {
     width: 100%;
     height: 60px;
-    background: #2e4967;
+    background: #6d121e;
     border: 0;
     border-radius: 8px;
     color: #fff;
